--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "font-awesome": "^4.7.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^10.2.2",
+    "react-fontawesome": "^1.7.1",
     "react-quill": "^1.3.5",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
@@ -25,7 +27,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "format": "prettier --write \"**/*.+(js)\""
+    "format": "prettier --write \"**/*.+(js)\"",
+    "stylelint-check": "stylelint-config-prettier-check"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -50,8 +53,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
-    "prettier": "^2.0.4",
-    "prettier-stylelint": "^0.4.2",
-    "stylelint-prettier": "^1.1.2"
+    "prettier-stylelint": "^0.4.0",
+    "stylelint": "^8.0.0"
   }
 }
