--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^16.13.1",
     "react-dropzone": "^10.2.2",
     "react-full-screen": "^0.2.4",
+    "react-ga": "^3.1.2",
     "react-quill": "^1.3.5",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
