--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "react-snap",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
@@ -66,6 +67,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
     "prettier-stylelint": "^0.4.0",
+    "react-snap": "^1.23.0",
     "stylelint": "^8.0.0"
   }
 }
