--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-sass": "^4.13.1",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
     "react-dropzone": "^10.2.2",
     "react-full-screen": "^0.2.4",
