--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.1",
     "react-dropzone": "^10.2.2",
     "react-full-screen": "^0.2.4",
+    "react-helmet": "^6.1.0",
     "react-quill": "^1.3.5",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
@@ -37,6 +38,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "react-snap",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
@@ -67,6 +69,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
     "prettier-stylelint": "^0.4.0",
+    "react-snap": "^1.23.0",
     "stylelint": "^8.0.0"
   },
   "bit": {
