--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "bookshelf": "^1.2.0",
     "bootstrap": "^4.4.1",
+    "knex": "^0.21.15",
     "lodash": "^4.17.15",
     "moment": "^2.29.1",
     "node-sass": "^4.13.1",
+    "pg": "^8.5.1",
     "query-string": "^6.13.1",
     "react": "^17.0.1",
     "react-copy-to-clipboard": "^5.0.2",
