--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "yarn && react-scripts build",
     "server": "react-scripts build && node server.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
