--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.1",
     "react-dropzone": "^10.2.2",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.0.9",
     "react-quill": "^1.3.5",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
