lodash and moment replaced with smaller packages

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "axios": "^0.21.1",
     "bookshelf": "^1.2.0",
     "bootstrap": "^4.4.1",
+    "date-fns": "^2.21.2",
     "knex": "^0.95.4",
-    "lodash": "^4.17.15",
-    "moment": "^2.29.1",
+    "lodash.debounce": "^4.0.8",
+    "lodash.orderby": "^4.6.0",
+    "lodash.uniqueid": "^4.0.1",
     "node-sass": "^4.13.1",
     "pg": "^8.5.1",
     "query-string": "^7.0.0",
