--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "react-scripts": "4.0.3",
     "react-select": "^4.3.0",
     "reactstrap": "^8.4.1",
-    "slate": "^0.62.0",
+    "slate": "^0.63.0",
     "slate-history": "^0.62.0",
-    "slate-react": "^0.62.0",
+    "slate-react": "0.64.0",
     "source-map-explorer": "^2.4.2",
     "web-vitals": "^1.1.1",
     "workbox-background-sync": "^6.1.2",
