--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "reactstrap": "^8.4.1",
     "slate": "^0.63.0",
     "slate-history": "^0.62.0",
-    "slate-react": "0.64.0",
+    "slate-react": "^0.65.2",
     "source-map-explorer": "^2.4.2",
     "web-vitals": "^1.1.1",
     "workbox-background-sync": "^6.1.2",
