--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "slate": "^0.63.0",
     "slate-history": "^0.62.0",
     "slate-react": "^0.65.2",
+    "socket.io-client": "^4.1.3",
     "source-map-explorer": "^2.4.2",
     "web-vitals": "^1.1.1",
     "workbox-background-sync": "^6.1.2",
