--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,12 +8,7 @@
 		"mocha": true,
 		"jquery": true
 	},
-	"extends": [
-		"eslint:recommended",
-		"plugin:react/recommended",
-		"react-app",
-		"prettier"
-	],
+	"extends": ["eslint:recommended", "plugin:react/recommended", "react-app", "prettier"],
 	"parser": "babel-eslint",
 	"parserOptions": {
 		"ecmaVersion": 2018,
@@ -25,17 +20,11 @@
 		},
 		"sourceType": "module"
 	},
-	"plugins": [
-		"import",
-		"flowtype",
-		"jsx-a11y",
-		"react",
-		"react-hooks"
-	],
+	"plugins": ["import", "flowtype", "jsx-a11y", "react", "react-hooks"],
 	"settings": {
 		"react": {
 			"pragma": "React",
-			"version": "16.5.0"
+			"version": "17.0.1"
 		}
 	},
 	"globals": {
