--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"bookshelf": "^1.2.0",
 		"bootstrap": "^5.1.3",
 		"date-fns": "^2.25.0",
+		"formik": "^2.2.9",
 		"knex": "^0.95.12",
 		"lodash.debounce": "^4.0.8",
 		"lodash.orderby": "^4.6.0",
@@ -50,7 +51,8 @@
 		"workbox-range-requests": "^6.3.0",
 		"workbox-routing": "^6.3.0",
 		"workbox-strategies": "^6.3.0",
-		"workbox-streams": "^6.3.0"
+		"workbox-streams": "^6.3.0",
+		"yup": "^0.32.11"
 	},
 	"scripts": {
 		"start": "react-scripts start",
