--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"date-fns": "^2.25.0",
 		"formik": "^2.2.9",
 		"knex": "^0.95.12",
+		"lodash.camelcase": "^4.3.0",
 		"lodash.debounce": "^4.0.8",
 		"lodash.orderby": "^4.6.0",
 		"lodash.uniqueid": "^4.0.1",
