--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"knex": "^0.95.12",
 		"lodash.camelcase": "^4.3.0",
 		"lodash.debounce": "^4.0.8",
+		"lodash.isequal": "^4.5.0",
 		"lodash.orderby": "^4.6.0",
 		"lodash.uniqueid": "^4.0.1",
 		"node-sass": "^6.0.1",
