--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"axios": "^0.24.0",
 		"bookshelf": "^1.2.0",
 		"bootstrap": "^5.1.3",
+		"classnames": "^2.3.1",
 		"date-fns": "^2.25.0",
 		"formik": "^2.2.9",
 		"knex": "^0.95.12",
