--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"deploy": "yarn && react-scripts build",
-		"server": "react-scripts build && node server.js",
+		"server": "react-scripts build --clean && node server.js",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"analyze": "source-map-explorer 'build/static/js/*.js'",
