--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"react-helmet": "^6.1.0",
 		"react-redux": "^7.2.6",
 		"react-router-dom": "^6.2.1",
-		"react-scripts": "4.0.3",
+		"react-scripts": "5.0.0",
 		"react-select": "^5.1.0",
 		"reactstrap": "^9.0.0",
 		"slate": "^0.65.3",
@@ -84,9 +84,10 @@
 		]
 	},
 	"devDependencies": {
-		"eslint": "^7.23.0",
+		"@babel/eslint-parser": "^7.16.5",
+		"eslint": "^8.6.0",
 		"eslint-config-prettier": "^8.1.0",
-		"eslint-plugin-import": "^2.25.2",
+		"eslint-plugin-import": "^2.25.4",
 		"eslint-plugin-jsx-a11y": "^6.2.3",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-react": "^7.28.0",
