TG-38: upgraded node-sass and downgraded socket.io because of warning

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"lodash.isequal": "^4.5.0",
 		"lodash.orderby": "^4.6.0",
 		"lodash.uniqueid": "^4.0.1",
-		"node-sass": "^6.0.1",
+		"node-sass": "^7.0.1",
 		"pg": "^8.5.1",
 		"query-string": "^7.0.0",
 		"react": "^17.0.1",
@@ -40,7 +40,7 @@
 		"slate": "^0.65.3",
 		"slate-history": "^0.65.3",
 		"slate-react": "^0.65.2",
-		"socket.io-client": "^4.3.2",
+		"socket.io-client": "4.0.0",
 		"source-map-explorer": "^2.4.2",
 		"web-vitals": "^2.1.2",
 		"workbox-background-sync": "^6.4.2",
