Feature/TG-38 packages upgrade (#14)
* TG-38: upgraded react router dom to v6

* TG-38: upgraded eslint and react-scripts

* TG-38: upgraded node-sass and downgraded socket.io because of warning

* Revert "TG-38: upgraded react router dom to v6"

This reverts commit 42a552dd7c5e891cf1464b287a43ef5e06371fcf.

* TG-38: yarn.lock generated

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"lodash.isequal": "^4.5.0",
 		"lodash.orderby": "^4.6.0",
 		"lodash.uniqueid": "^4.0.1",
-		"node-sass": "^6.0.1",
+		"node-sass": "^7.0.1",
 		"pg": "^8.5.1",
 		"query-string": "^7.0.0",
 		"react": "^17.0.1",
@@ -33,14 +33,14 @@
 		"react-dropzone": "^11.4.2",
 		"react-helmet": "^6.1.0",
 		"react-redux": "^7.2.6",
+		"react-scripts": "5.0.0",
 		"react-router-dom": "^5.1.2",
-		"react-scripts": "4.0.3",
 		"react-select": "^5.1.0",
 		"reactstrap": "^9.0.0",
 		"slate": "^0.65.3",
 		"slate-history": "^0.65.3",
 		"slate-react": "^0.65.2",
-		"socket.io-client": "^4.3.2",
+		"socket.io-client": "4.0.0",
 		"source-map-explorer": "^2.4.2",
 		"web-vitals": "^2.1.2",
 		"workbox-background-sync": "^6.3.0",
@@ -84,9 +84,10 @@
 		]
 	},
 	"devDependencies": {
-		"eslint": "^7.23.0",
+		"@babel/eslint-parser": "^7.16.5",
+		"eslint": "^8.6.0",
 		"eslint-config-prettier": "^8.1.0",
-		"eslint-plugin-import": "^2.25.2",
+		"eslint-plugin-import": "^2.25.4",
 		"eslint-plugin-jsx-a11y": "^6.2.3",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-react": "^7.26.1",
