--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"@fortawesome/free-regular-svg-icons": "^5.13.0",
 		"@fortawesome/free-solid-svg-icons": "^5.13.0",
 		"@fortawesome/react-fontawesome": "^0.1.16",
+		"@manaflair/redux-batch": "^1.0.0",
 		"@reduxjs/toolkit": "^1.6.2",
 		"@testing-library/jest-dom": "^5.11.10",
 		"@testing-library/react": "^12.1.2",
@@ -33,8 +34,8 @@
 		"react-dropzone": "^11.4.2",
 		"react-helmet": "^6.1.0",
 		"react-redux": "^7.2.6",
-		"react-scripts": "5.0.0",
 		"react-router-dom": "^5.1.2",
+		"react-scripts": "5.0.0",
 		"react-select": "^5.1.0",
 		"reactstrap": "^9.0.0",
 		"slate": "^0.65.3",
