--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
 		"@fortawesome/free-regular-svg-icons": "^5.13.0",
 		"@fortawesome/free-solid-svg-icons": "^5.13.0",
 		"@fortawesome/react-fontawesome": "^0.1.16",
-		"@manaflair/redux-batch": "^1.0.0",
 		"@reduxjs/toolkit": "^1.6.2",
 		"@testing-library/jest-dom": "^5.11.10",
 		"@testing-library/react": "^12.1.2",
@@ -17,6 +16,7 @@
 		"bookshelf": "^1.2.0",
 		"bootstrap": "^5.1.3",
 		"classnames": "^2.3.1",
+		"connected-react-router": "^6.9.2",
 		"date-fns": "^2.25.0",
 		"formik": "^2.2.9",
 		"knex": "^0.95.12",
