--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
 		"@fortawesome/free-brands-svg-icons": "^5.14.0",
 		"@fortawesome/free-regular-svg-icons": "^5.13.0",
 		"@fortawesome/free-solid-svg-icons": "^5.13.0",
-		"@fortawesome/react-fontawesome": "^0.1.16",
+		"@fortawesome/react-fontawesome": "^0.1.17",
 		"@reduxjs/toolkit": "^1.6.2",
 		"@testing-library/jest-dom": "^5.11.10",
 		"@testing-library/react": "^12.1.2",
 		"@testing-library/user-event": "^13.5.0",
-		"axios": "^0.24.0",
+		"axios": "^0.25.0",
 		"bookshelf": "^1.2.0",
 		"bootstrap": "^5.1.3",
 		"classnames": "^2.3.1",
 		"connected-react-router": "^6.9.2",
 		"date-fns": "^2.25.0",
 		"formik": "^2.2.9",
-		"knex": "^0.95.12",
+		"knex": "^1.0.2",
 		"lodash.camelcase": "^4.3.0",
 		"lodash.debounce": "^4.0.8",
 		"lodash.isequal": "^4.5.0",
@@ -27,23 +27,23 @@
 		"lodash.uniqueid": "^4.0.1",
 		"node-sass": "^7.0.1",
 		"pg": "^8.5.1",
-		"query-string": "^7.0.0",
+		"query-string": "^7.1.0",
 		"react": "^17.0.1",
 		"react-copy-to-clipboard": "^5.0.2",
 		"react-dom": "^17.0.1",
-		"react-dropzone": "^11.4.2",
+		"react-dropzone": "^11.5.3",
 		"react-helmet": "^6.1.0",
 		"react-redux": "^7.2.6",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "5.0.0",
-		"react-select": "^5.1.0",
+		"react-select": "^5.2.2",
 		"reactstrap": "^9.0.0",
-		"slate": "^0.72.3",
+		"slate": "^0.72.8",
 		"slate-history": "^0.66.0",
-		"slate-react": "^0.72.6",
+		"slate-react": "^0.72.8",
 		"socket.io-client": "4.0.0",
 		"source-map-explorer": "^2.4.2",
-		"web-vitals": "^2.1.2",
+		"web-vitals": "^2.1.4",
 		"workbox-background-sync": "^6.3.0",
 		"workbox-broadcast-update": "^6.3.0",
 		"workbox-cacheable-response": "^6.3.0",
@@ -86,15 +86,17 @@
 	},
 	"devDependencies": {
 		"@babel/eslint-parser": "^7.16.5",
-		"eslint": "^8.6.0",
+		"eslint": "^8.8.0",
 		"eslint-config-prettier": "^8.1.0",
+		"eslint-config-react-app": "^7.0.0",
+		"eslint-plugin-flowtype": "^8.0.3",
 		"eslint-plugin-import": "^2.25.4",
 		"eslint-plugin-jsx-a11y": "^6.2.3",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-react": "^7.26.1",
 		"eslint-plugin-react-hooks": "^4.2.0",
 		"prettier-stylelint": "^0.4.0",
-		"stylelint": "^14.0.1"
+		"stylelint": "^14.3.0"
 	},
 	"bit": {
 		"env": {},
