--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "ui",
-	"version": "0.1.0",
+	"version": "1.0.0",
 	"private": true,
 	"dependencies": {
 		"@fortawesome/fontawesome-svg-core": "^1.2.28",
@@ -68,7 +68,14 @@
 		"eject": "react-scripts eject",
 		"analyze": "source-map-explorer 'build/static/js/*.js'",
 		"format": "prettier --write \"**/*.+(js)\"",
-		"stylelint-check": "stylelint-config-prettier-check"
+		"stylelint-check": "stylelint-config-prettier-check",
+		"postrelease-major": "shjs version-control major",
+		"postrelease-minor": "shjs version-control minor",
+		"postrelease-patch": "shjs version-control patch",
+		"preversion": "git-branch-is -r \"(^dev|^Release-v\\d+\\.\\d+\\.\\d+)\" && echo \"Preversion checks passed.\"",
+		"release-major": "yarn version --major --no-git-tag-version",
+		"release-minor": "yarn version --minor --no-git-tag-version",
+		"release-patch": "yarn version --patch --no-git-tag-version"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
@@ -87,6 +94,7 @@
 	},
 	"devDependencies": {
 		"@babel/eslint-parser": "^7.16.5",
+		"branch-name": "^1.0.0",
 		"eslint": "^8.8.0",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-config-react-app": "^7.0.0",
@@ -96,7 +104,9 @@
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-react": "^7.26.1",
 		"eslint-plugin-react-hooks": "^4.2.0",
+		"git-branch-is": "^4.0.0",
 		"prettier-stylelint": "^0.4.0",
+		"shelljs": "^0.8.5",
 		"stylelint": "^14.3.0"
 	},
 	"bit": {
