--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"react-copy-to-clipboard": "^5.0.2",
 		"react-dom": "^17.0.1",
 		"react-dropzone": "^11.5.3",
+		"react-ga": "^3.3.0",
 		"react-helmet": "^6.1.0",
 		"react-redux": "^7.2.6",
 		"react-router-dom": "^5.1.2",
