TG-53: replaced ga library, added ga middleware

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"@fortawesome/free-regular-svg-icons": "^5.13.0",
 		"@fortawesome/free-solid-svg-icons": "^5.13.0",
 		"@fortawesome/react-fontawesome": "^0.1.17",
+		"@redux-beacon/google-analytics-gtag": "^1.1.0",
 		"@reduxjs/toolkit": "^1.6.2",
 		"@testing-library/jest-dom": "^5.11.10",
 		"@testing-library/react": "^12.1.2",
@@ -33,13 +34,13 @@
 		"react-copy-to-clipboard": "^5.0.2",
 		"react-dom": "^17.0.1",
 		"react-dropzone": "^11.5.3",
-		"react-ga4": "^1.4.1",
 		"react-helmet": "^6.1.0",
 		"react-redux": "^7.2.6",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "5.0.0",
 		"react-select": "^5.2.2",
 		"reactstrap": "^9.0.0",
+		"redux-beacon": "^2.1.0",
 		"slate": "^0.72.8",
 		"slate-history": "^0.66.0",
 		"slate-react": "^0.72.9",
