--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"react-copy-to-clipboard": "^5.0.2",
 		"react-dom": "^17.0.1",
 		"react-dropzone": "^12.0.4",
+		"react-easy-crop": "^4.1.3",
 		"react-helmet": "^6.1.0",
 		"react-redux": "^7.2.6",
 		"react-router-dom": "^5.1.2",
